--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.11.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@vitejs/plugin-legacy": "^1.6.3",
     "@vitejs/plugin-react": "^1.0.0",
     "less": "^4.1.2",
     "typescript": "^4.3.2",
